--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title">Handstand Pushups</string>
-    <string name="subtitle">The handstand push-up (press-up) - also called the vertical push-up (press-up) or the inverted push-up (press-up) also called "commandos"- is a type of push-up exercise where the body is positioned in a handstand. To prepare the strength until one has built adequate balance.</string>
+    <string name="pushups">Pushups</string>
+    <string name="pushups_subtitle">Push-up (or press-up if the hands are wider than shoulders placing more emphasis on the pectoral muscles) is a common calisthenics exercise beginning from the prone position, or the front leaning rest position known in the military. </string>
+    <string name="handstand_subtitle">The handstand push-up (press-up) - also called the vertical push-up (press-up) or the inverted push-up (press-up) also called "commandos"- is a type of push-up exercise where the body is positioned in a handstand. To prepare the strength until one has built adequate balance.</string>
 </resources>
